@@ -44,7 +44,6 @@ import org.hl7.fhir.definitions.model.ElementDefn;
 import org.hl7.fhir.definitions.model.Invariant;
 import org.hl7.fhir.definitions.model.TypeRef;
 import org.hl7.fhir.exceptions.FHIRException;
-import org.hl7.fhir.r5.conformance.profile.ProfileUtilities;
 import org.hl7.fhir.r5.formats.IParser.OutputStyle;
 import org.hl7.fhir.r5.formats.XmlParser;
 import org.hl7.fhir.r5.model.DataType;
@@ -64,6 +63,7 @@ import org.hl7.fhir.r5.model.StructureDefinition;
 import org.hl7.fhir.r5.model.StructureDefinition.StructureDefinitionKind;
 import org.hl7.fhir.r5.model.StructureDefinition.StructureDefinitionMappingComponent;
 import org.hl7.fhir.r5.utils.ToolingExtensions;
+import org.hl7.fhir.r5.utils.UserDataNames;
 import org.hl7.fhir.tools.publisher.PageProcessor;
 import org.hl7.fhir.utilities.CommaSeparatedStringBuilder;
 import org.hl7.fhir.utilities.StandardsStatus;
@@ -84,7 +84,6 @@ public class DictHTMLGenerator  extends OutputStreamWriter {
 	}
 
 	public void generate(StructureDefinition profile) throws Exception {
-	  int i = 1;
 	  write("<table class=\"dict\">\r\n");
 
 	  for (ElementDefinition ec : profile.getSnapshot().getElement()) {
@@ -112,7 +111,7 @@ public class DictHTMLGenerator  extends OutputStreamWriter {
 	    }
 	  }
 	  write("</table>\r\n");
-	  i++;      
+
     flush();
     close();
   }
@@ -152,7 +151,7 @@ public class DictHTMLGenerator  extends OutputStreamWriter {
       }
     }
     write("</table>\r\n");
-    i++;      
+    i++;
     flush();
     close();
   }
@@ -391,7 +390,7 @@ public class DictHTMLGenerator  extends OutputStreamWriter {
       return s0.compareTo(s1);
     int comp = parts0[0].compareTo(parts1[0]);
     if (comp == 0 && Utilities.isInteger(parts0[1]) && Utilities.isInteger(parts1[1]))
-      return new Integer(parts0[1]).compareTo(new Integer(parts1[1]));
+      return Integer.valueOf(parts0[1]).compareTo(Integer.valueOf(parts1[1]));
     else
       return parts0[1].compareTo(parts1[1]);
     }
@@ -428,8 +427,8 @@ public class DictHTMLGenerator  extends OutputStreamWriter {
   }
 
   private boolean isInherited(ElementDefinitionConstraintComponent id, StructureDefinition sd) {
-    if (id.hasUserData(ProfileUtilities.UD_IS_DERIVED)) {
-      Boolean b = (Boolean) id.getUserData(ProfileUtilities.UD_IS_DERIVED);
+    if (id.hasUserData(UserDataNames.SNAPSHOT_IS_DERIVED)) {
+      Boolean b = (Boolean) id.getUserData(UserDataNames.SNAPSHOT_IS_DERIVED);
       return b.booleanValue();
     } else {
       //  if it was snapshotted in process? can't happen? - only happens on extensions... no id too, and then definitely inherited. see https://xkcd.com/2200/
